Mon Jan 31 09:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ARGV.h:
        * ace/Configuration.h:
          Doxygen improvements

Mon Jan 31 08:29:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Logging/Trace_Return.cpp:
        * apps/JAWS/clients/Caching/http_client.cpp:
          Fixed unicode errors

        * apps/mkcsregdb/mkcsregdb.mpc:
        * ASNMP/examples/walk/walk.mpc:
        * ASNMP/examples/trap/trap.mpc:
        * ASNMP/examples/set/set.mpc:
        * ASNMP/examples/next/next.mpc:
        * ASNMP/examples/get/get.mpc:
          Added avoids += uses_wchar, the code can't be build with wchar
          enabled

Mon Jan 31 08:18:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/APG/Reactor/Timers.cpp:
          Fixed unicode link errors

Mon Jan 31 07:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_wchar.h:
          Added ACE_TEXT_OutputDebugString

        * examples/Log_Msg/Log_Msg_MFC/MFC_Log.cpp:
          Use ACE_TEXT_OutputDebugString instead of ::OutputDebugString
          to fix compile errors in wchar builds

Sun Jan 30 08:46:56 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Filecache.cpp:

	  Added missing "template<>" to explicit class member
	  specializations, as required by the C++ standard.

Sun Jan 30 13:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IOStream/client/iostream_client.cpp:
          Fixed unicode compile warning

Sun Jan 30 13:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/C++NPv1/Process_Per_Connection_Logging_Server.cpp:
          Use ACE_OS::strncpy instead of strncpy directly to fix compile
          error in Cygwin build

Sun Jan 30 13:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/ASX/CCM_App/CCM_App.cpp:
          Fixed warning in unicode build

        * ace/Service_Object.h:
          Doxygen fixes
