@@ -35,7 +35,6 @@ namespace TAO
       static
       POLICYTYPE create (
         const char *factory_string,
-        const ACE_TCHAR directive[],
         const CORBA::Any &value ACE_ENV_ARG_DECL)
           ACE_THROW_SPEC ((CORBA::PolicyError))
       {
@@ -54,7 +53,6 @@ namespace TAO
       static
       POLICYTYPE create (
         const char *factory_string,
-        const ACE_TCHAR directive[],
         POLICYVALUETYPE value ACE_ENV_ARG_DECL)
       {
         FACTORY *policy_factory =
