@@ -32,8 +32,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::ThreadPolicyValue>::create (
               "ThreadPolicyFactory",
-              ACE_TEXT("dynamic ThreadPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_ThreadPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
 #endif /* TAO_HAS_MINIMUM_POA == 0 */
@@ -43,8 +41,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::LifespanPolicyValue>::create (
               "LifespanPolicyFactory",
-              ACE_TEXT("dynamic LifespanPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_LifespanPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
   if (type == PortableServer::ID_UNIQUENESS_POLICY_ID)
@@ -53,8 +49,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::IdUniquenessPolicyValue>::create (
               "IdUniquenessPolicyFactory",
-              ACE_TEXT("dynamic IdUniquenessPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_IdUniquenessPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
   if (type == PortableServer::ID_ASSIGNMENT_POLICY_ID)
@@ -63,8 +57,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::IdAssignmentPolicyValue>::create (
               "IdAssignmentPolicyFactory",
-              ACE_TEXT("dynamic IdAssignmentPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_IdAssignmentPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
 #if (TAO_HAS_MINIMUM_POA == 0)
@@ -75,8 +67,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::ImplicitActivationPolicyValue>::create (
               "ImplicitActivationPolicyFactory",
-              ACE_TEXT("dynamic ImplicitActivationPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_ImplicitActivationPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
   if (type == PortableServer::SERVANT_RETENTION_POLICY_ID)
@@ -85,8 +75,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::ServantRetentionPolicyValue>::create (
               "ServantRetentionPolicyFactory",
-              ACE_TEXT("dynamic ServantRetentionPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_ServantRetentionPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
   if (type == PortableServer::REQUEST_PROCESSING_POLICY_ID)
@@ -95,8 +83,6 @@ TAO_PortableServer_PolicyFactory::create_policy (
             CORBA::Policy_ptr,
             PortableServer::RequestProcessingPolicyValue>::create (
               "RequestProcessingPolicyFactory",
-              ACE_TEXT("dynamic RequestProcessingPolicyFactory Service_Object *")
-              ACE_TEXT("TAO_PortableServer:_make_RequestProcessingPolicyFactoryImpl()"),
               value ACE_ENV_ARG_PARAMETER);
 
 #endif /* TAO_HAS_MINIMUM_POA == 0 */
