@@ -1,3 +1,9 @@
+Mon Jan 31 10:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ASNMP/agent/agent.mpc:
+          Added avoids += uses_wchar, the code can't be build with wchar
+          enabled
+
 Mon Jan 31 09:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/ARGV.h:
